<resources>
    <string name="app_name">WeatherPicks</string>
    <string name="sub_name">Sunny</string>
    <string name="title_home">ホーム</string>
    <string name="title_register">地域・性別</string>
    <string name="title_coordinate">コーディネイト</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">お気に入り</string>
    <string name="weather_api_key">6e8e86e4e208ed9480deb401bd28ba65</string>

    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="button">登録</string>
    <string name="gender_selected">性別を選んでください</string>
    <string name="area" />
    <string name="area_selected">地域を選択してください</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="todayText">本日の名古屋の天気</string>
    <string name="testData">TestData</string>
    <string name="globalWeather">全国の天気</string>
    <string name="date">日付</string>
    <string name="time">時刻</string>
    <string name="temp">温度</string>
    <string name="weather">天気</string>
    <string name="pop">降水率</string>
    <string name="hum">湿度</string>
    <string name="weatherPicks">WeatherPicks</string>
    <string name="kagosima">鹿児島</string>
    <string name="kochi">高知</string>
    <string name="osaka">大阪</string>
    <string name="nagoya">名古屋</string>
    <string name="tokyo">東京</string>
    <string name="sendai">仙台</string>
    <string name="naha">那覇</string>
    <string name="recoItem">便利なアイテム</string>
    <string name="hukuoka">福岡</string>
    <string name="hirosima">広島</string>
    <string name="kanazawa">金沢</string>
    <string name="niigata">新潟</string>
    <string name="sapporo">札幌</string>
    <string name="todayRecoCoordinate">本日のおすすめ服装</string>
    <string name="crotchIndex">服装指数</string>
</resources>
